<?xml version="1.0" encoding="utf-8"?>
<!--
    MindBell - Aims to give you a support for staying mindful in a busy life -
               for remembering what really counts
   
        Copyright (C) 2010-2014 Marc Schroeder
        Copyright (C) 2014-2016 Uwe Damken
   
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at
   
        http://www.apache.org/licenses/LICENSE-2.0
   
    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
 -->
 
<resources>

    <string name="app_name">MindBell</string>

    <!-- Main window -->
    <string name="explanation">MindBell rings periodically during the day as a mindfulness
    	bell, to give you the opportunity to hold on for a moment and consider what you are 
		currently doing, and in what state of mind you are while you are doing it. 
		According to the Buddhist teacher Thich Nhat Hanh, this is an effective 
		means of developing mindfulness.</string>
    <string name="howToRing">Tap to ring</string>
    <string name="howToSet">Use bell-on icon or settings in menu to activate the bell.</string>

    <!-- Menu -->
    <string name="menuSettings">Settings</string>
    <string name="menuAbout">About MindBell</string>
    <string name="menuSendInfoMail">Create info e-mail</string>
    <string name="menuSendInfoAndLogMail">Create info+log e-mail</string>
    
    <!-- Send log by e-mail -->
    <string name="emailSubject">Info e-mail sent by MindBell</string>
    <string name="emailChooseApp">Send mail &#8230;</string>

    <!-- Preference window -->
    <string name="preferencesTitle">MindBell Preferences</string>
    <string name="prefsCategoryGlobal">Global settings</string>
    <string name="prefsActive">Activate bell</string>
    <string name="summaryActive">Bell is turned on</string>
    <string name="summaryNotActive">Bell is turned off</string>
    <string name="prefsCategoryDisplay">Display</string>
    <string name="prefsShow">Show bell when ringing</string>
    <string name="summaryShow">Play sound and show bell</string>
    <string name="summaryDontShow">Play sound but do not show bell</string>
    <string name="prefsCategoryNotifications">Notifications</string>
    <string name="prefsStatus">Show status icon</string>
    <string name="summaryStatus">Show status icon when bell is active</string>
    <string name="summaryNoStatus">No status icon, set and forget</string>
    <string name="prefsStatusVisibilityPublic">Show text on lock screen</string>
    <string name="summaryStatusVisibilityPublic">Show text on lock screen</string>
    <string name="summaryStatusVisibilityPrivate">Hide text on lock screen</string>
    <string name="prefsStatusIconMaterialDesign">Status icon in Material Design</string>
    <string name="summaryStatusIconMaterialDesign">Stylized white bell</string>
    <string name="summaryStatusIconPreMaterialDesign">Golden bell (just a white splotch on some devices)</string>
    <string name="prefsCategorySound">Sound</string>
    <string name="prefsVolume">Volume</string>
    <string name="prefsVibrate">Vibrate</string>
    <string name="summaryVibrate">Bell vibrates while ringing</string>
    <string name="summaryNoVibrate">Bell does not vibrate while ringing</string>
    <string name="prefsMuteWithPhone">Mute with phone</string>
    <string name="summaryMuteWithPhone">Bell will not ring when phone is muted</string>
    <string name="summaryNoMuteWithPhone">Ring bell even when phone is muted</string>
    <string name="prefsMuteOffHook">Mute during phone calls</string>
    <string name="summaryMuted">Bell will not ring during phone calls</string>
    <string name="summaryNotMuted">Bell will also ring during phone calls</string>
    <string name="prefsMuteInFlightMode">Mute in flight mode</string>
    <string name="summaryMutedInFlightMode">Bell will not ring in flight mode</string>
    <string name="summaryNotMutedInFlightMode">Bell will also ring in flight mode</string>
    <string name="prefsCategoryDetails">Details</string>
    <string name="prefsFrequency">Ring bell (about) every &#8230;</string>
    <string name="prefsRandomize">Use interval deviation</string>
    <string name="prefsNormalize">Ring to the minute &#8230;</string>
    <string name="summaryRandomize">Bell ring interval will vary</string>
    <string name="summaryDontRandomize">Bell ring interval is constant</string>
    <string name="prefsStart">Start bell every day at &#8230;</string>
    <string name="prefsEnd">Stop bell every day at &#8230;</string>
    <string name="prefsActiveOnDaysOfWeek">Days of week to be active &#8230;</string>
    
    <string name="atLeastOneActiveDayNeeded">Specify at least one day</string>
    <string name="frequencyDoesNotFitIntoAnHour">Ringing on the minute not possible with chosen interval</string>

	<!-- AboutActivity -->
	<string name="title_activity_about">About MindBell</string>
	<string name="about_html_text_url">file:///android_asset/about.html</string>

    <!-- Status bar notifications -->
    <string name="statusTitleNotificationsDisabled">Please check settings</string>
    <string name="statusTextNotificationsDisabled">MindBell turned off \'Show status icon\'</string>
    <string name="statusTitleBellActive">MindBell is active</string>
    <string name="statusTextBellActive">_STARTTIME_ to _ENDTIME_ on _WEEKDAYS_</string>

    <!-- Reasons why bell is muted -->
    <string name="reasonMutedWithPhone">Bell muted with phone</string>
    <string name="reasonMutedOffHook">Bell muted during calls</string>
    <string name="reasonMutedInFlightMode">Bell muted in flight mode</string>

    <!-- Reasons why permission READ_PHONE_STATE should be granted -->
    <string name="reasonReadPhoneStateTitle">Why this permission?</string>
    <string name="reasonReadPhoneStateText">\'Show status icon\' and \'Mute during phone calls\' has been
        selected. That means that MindBell turns over the bell in the notification bar when a phone
        call is incoming or outgoing. To achieve this, MindBell has to be informed of calls. Only when
        permission READ_PHONE_STATE is granted MindBell can be kept informed. If the permission is denied
        either \'Show status icon\' or \'Mute during phone calls\' must be switched off.</string>

    <!-- Permission READ_PHONE_STATE denied but user checked 'never ask again' -->
    <string name="neverAskAgainReadPhoneStateTitle">Missing permission</string>
    <string name="neverAskAgainPhoneStateText">Permission READ_PHONE_STATE is not granted. Therefore
        either \'Show status icon\' or \'Mute during phone calls\' must be switched off.</string>

    <!-- General dialog buttons -->
    <string name="buttonOk">OK</string>

    <!-- Offer popup -->
    <!--
    <string name="main_title_popup">New from Mindful Apps</string>
    <string name="main_message1_popup">Nature Sounds Alarm Clock - the alarm that you set with your finger!</string>
    <string name="main_message2_popup">Wake up to pleasant nature sounds.</string>
    <string name="main_yes_popup">Show me</string>
    <string name="main_no_popup">No thanks</string>
    <string name="main_uri_popup" translatable="false">market://details?id=com.mindful_apps.alarm.natural</string>
    -->

    <!-- Preference keys (don't localize) -->
    <string name="keyActive" translatable="false">active</string>
    <string name="keyShow" translatable="false">show</string>
    <string name="keyStatus" translatable="false">status</string>
    <string name="keyStatusVisibilityPublic" translatable="false">statusVisiblityPublic</string>
    <string name="keyStatusIconMaterialDesign" translatable="false">statusIconMaterialDesign</string>
    <string name="keyVolume" translatable="false">volume</string>
    <string name="keyMuteWithPhone" translatable="false">muteWithPhone</string>
    <string name="keyVibrate" translatable="false">vibrate</string>
    <string name="keyMuteOffHook" translatable="false">muteOffHook</string>
    <string name="keyMuteInFlightMode" translatable="false">muteOffInFlightMode</string>
    <string name="keyFrequency" translatable="false">frequency</string>
    <string name="keyRandomize" translatable="false">randomize</string>
    <string name="keyNormalize" translatable="false">normalize</string>
    <string name="keyStart" translatable="false">start</string>
    <string name="keyEnd" translatable="false">end</string>
    <string name="keyActiveOnDaysOfWeek" translatable="false">activeOnDaysOfWeek</string>
    <string name="keyTry" translatable="false">try</string>
    
    <!-- Unique string to be added to a Scheduling Intent to see who sent it (don't localize) -->
    <string name="extraIsRescheduling" translatable="false">com.googlecode.mindbell.Scheduler.IsRescheduling</string>

    <!-- Unique string to be added to a Scheduling Intent to see for which time the bell was scheduled (don't localize) -->
    <string name="extraNextTargetTimeMillis" translatable="false">com.googlecode.mindbell.Scheduler.NextTargetTimeMillis</string>

    <!-- Mail address for send log by e-mail (don't localize) -->
    <string name="emailAddress" translatable="false">mindbell@dknapps.de</string>

</resources>