<?xml version="1.0" encoding="utf-8"?>
<!--
    MindBell - Aims to give you a support for staying mindful in a busy life -
               for remembering what really counts
   
        Copyright (C) 2010-2014 Marc Schroeder
        Copyright (C) 2014-2016 Uwe Damken
   
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at
   
        http://www.apache.org/licenses/LICENSE-2.0
   
    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
 -->


<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:mindful="http://dknapps.de/ns">

	<PreferenceCategory android:title="@string/prefsCategoryNotifications">
	  <CheckBoxPreference android:key="@string/keyStatus"
	    android:title="@string/prefsStatus"
	    android:summaryOff="@string/summaryNoStatus"
	    android:summaryOn="@string/summaryStatus"
	    android:defaultValue="false"/>
	  <CheckBoxPreference android:key="@string/keyStatusIconMaterialDesign"
	    android:title="@string/prefsStatusIconMaterialDesign"
	    android:summaryOff="@string/summaryStatusIconPreMaterialDesign"
	    android:summaryOn="@string/summaryStatusIconMaterialDesign"
	    android:defaultValue="true"
	    android:dependency="@string/keyStatus"/>
	</PreferenceCategory>

</PreferenceScreen>
